--- a/Quiz_Code_Route_2025.html
+++ b/Quiz_Code_Route_2025.html
@@ -29,6 +29,8 @@ const allQuestions = [
   {q: "3. Le taux maximum pour le permis probatoire est 0,2 g/L.", a:["Vrai","Faux"], correct:0},
   {q: "4. On peut franchir une ligne continue pour dépasser.", a:["Vrai","Faux"], correct:1},
   {q: "5. Les piétons sont prioritaires aux passages piétons.", a:["Vrai","Faux"], correct:0},
+  {q: "6. La circulation inter-files est désormais autorisée partout en France.", a:["Vrai", "Faux"], correct:0},
+  
   // Ajoute ici des dizaines d’autres questions couvrant les 10 thèmes...
 ];
 
